Fix an issue where lists were too narrow on small screens

--- a/_sass/general.scss
+++ b/_sass/general.scss
@@ -20,7 +20,6 @@
     margin-left: 0;
     padding-left: 27px;
     text-indent: -27px;
-    padding-right: 6em;
     li:before {
       font-size: 21px;
       color: $grey-color;
@@ -29,5 +28,11 @@
       content: "\2605";
     }
     & + h1 { margin-top: 1.25em; }
+  }
+}
+
+@media screen and (min-width: 600px) {
+  #resume > ul {
+    padding-right: 6em;
   }
 }
